--- a/jenkins-slave/Dockerfile
+++ b/jenkins-slave/Dockerfile
@@ -1,5 +1,7 @@
 FROM registry.access.redhat.com/rhel7/rhel
 
+USER root
+
 ENV JENKINS_SWARM_VERSION 2.0
 ENV JNLP_SLAVE_VERSION 2.52
 ENV HOME /opt/jenkins-slave
